--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,9 @@ body {
     color: #dddcdb;
 }
 .side-link {
-    background: #dcdcdc;
+    background: #0000007a;
     margin-top: 10px;
+    height: 350px;
 }
 .menu-bar ul {
     margin: 0;
@@ -60,10 +61,10 @@ body {
 
 .side-link h3 {
     text-align: center;
-    border-bottom: 2px solid #787878;
-    padding: 15px 0 10px 0;
+    border-bottom: 1px solid #787878;
+    padding: 10px 0 7px 0;
     margin: 0;
-    background: #bebebe;
+    background: #fbfbfb;
     border-radius: 3px 3px 0 0;
 }
 .article-section {
@@ -83,14 +84,14 @@ body {
 
 .side-link ul li a {
     font-size: 16px;
-    color: black;
     display: block;
-    border-bottom: 1px solid #bebebe;
+    border-bottom: 1px solid #616161;
+    color: white;
 }
 
 .side-link ul li a:hover {
     text-decoration: none;
-    background: #e7e7e7;
+    background: #efefefdb;
     color: #515151;
 }
 .slider {
@@ -105,9 +106,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: #0000003b;
+    background: #0000009e;
     padding: 30px;
     border-radius: 3px;
+    color: white;
 }
 
 .slider-img {
@@ -144,7 +146,7 @@ footer {
 }
 
 .f-about:last-child {
-    margin-right: 15px;
+    margin-right: 30px;
 }
 .f-about ul {
     /* margin: 0; */
@@ -162,12 +164,12 @@ footer {
 }
 /*Page Title*/
 .page-title {
-    background: #bebebe;
+    background: #ffffff;
     overflow: hidden;
     text-align: center;
-    margin: 0px 0  10px 0;
-    color: white;
-    padding: 15px 0;
+    /* margin: 0px 0  10px 0; */
+    color: black;
+    padding: 0px 0 15px 0;
 }
 
 .page-title h3 {
@@ -279,4 +281,104 @@ footer {
 .main-blog-img img {
     height: 360px;
     width: 100%;
+}
+.side-link ul li a span {
+    float: right;
+    color: black;
+    font-weight: bold;
+}
+
+/*home featured section*/
+.section-heading {
+    background: #ffffff;
+    /* border-bottom: 1px solid black; */
+    text-align: center;
+    padding: 25px 0 10px 0;
+    box-shadow: 0px 2px 5px black;
+    border-radius: 0 0 5px 5px;
+}
+.featured-product {
+    background: #ffffff63;
+    overflow: hidden;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    border: 1px solid white;
+}
+
+.section-heading h2 {
+    margin: 0 0 5px 0;
+    font-weight: bold;
+}
+
+.single-product,.blog-single {
+    padding: 10px;
+    background: white;
+    margin: 10px 5px 0 5px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 3px 0px black;
+}
+.product-img {
+    padding: 2px;
+    height: 150px;
+}
+
+.product-img,.blog-img img {
+    height: 100%;
+    width: 100%;
+}
+
+.product-heading {
+    text-align: center;
+    padding: 2px;
+    margin: 10px 0;
+    height: 81px;
+}
+
+.product-heading p {
+    margin: 0;
+    font-size: 16px;
+}
+.single-product:nth-child(6n) {
+    background: rebeccapurple;
+    overflow: hidden;
+    margin-right: 0;
+}
+.blog-img {
+    padding: 2px;
+    height: 250px;
+}
+.blog-single:hover {
+    opacity: 0.9;
+}
+
+.single-product:hover {
+    background: black;
+    color: white;
+    transition: .8s;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.product-heading h3 {
+    background: #e9e9e9;
+    margin: 0;
+    padding: 5px 0;
+    color: #337ab7;
+}
+.single-product {
+    height: 265px;
+}
+
+.product-img {
+    height: 170px;
+}
+.blog-single {
+    height: 470px;
+}
+.gallery-page {
+    background: #ffffff63;
+    overflow: hidden;
+    padding-bottom: 10px;
+    border: 1px solid white;
 }
